# ai-defra-search-data

./: .ruff.toml  Dockerfile  README.md  ai-opportunities-action-plan.jsonl  compose.yml  ingest.py  ingest_local.py  pgvector.Dockerfile  pyproject.toml  sonar-project.properties
.github/workflows/: check-pull-request.yml  publish-hotfix.yml  publish.yml
app/: config.py
app/client/: __init__.py  client.py
app/common/: bedrock.py  http_client.py  id_utils.py  mongo.py  ms_graph.py  postgres.py  s3.py
app/common/seed_data/: knowledge_vectors.sql
app/entrypoints/: fastapi.py
app/infra/: fastapi_app.py  mcp_server.py
app/ingestion/: models.py  orm_models.py  repository.py  service.py
app/knowledge/: models.py  orm_models.py  repository.py  router.py  service.py
app/knowledge/ingestion/: router.py  service.py
app/knowledge/management/: models.py  repository.py  request_schemas.py  router.py  service.py
app/knowledge_management/: api_schemas.py  dependencies.py  models.py  repository.py  request_schemas.py  router.py  service.py
app/search/: models.py
app/snapshot/: api_schemas.py  dependencies.py  mcp_tools.py  models.py  orm_models.py  repository.py  router.py  service.py
changelog/: db.changelog-2.0.xml  db.changelog-4.0.xml  db.changelog.xml
compose/: aws.env  postgres.env  start-localstack.sh
migrator/: Dockerfile
tests/entrypoints/http/: test_main.py
