[project]
name = "ai-defra-search-data"
version = "0.1.0"
description = "ai-defra-search-data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "asgi-logger>=0.1.0",
    "aws-embedded-metrics>=3.3.0",
    "boto3>=1.40.18",
    "chonkie>=1.3.0",
    "dnspython>=2.7.0",
    "ecs-logging>=2.2.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mcp[cli]>=1.15.0",
    "microsoft-kiota-authentication-azure>=1.9.6",
    "msgraph-sdk>=1.40.0",
    "pgvector>=0.4.1",
    "psycopg[binary,pool]>=3.2.10",
    "pydantic-settings>=2.9.1",
    "pymongo[aws,encryption,snappy,zstd]>=4.13.1",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
    "taskipy>=1.14.1",
]

[project.scripts]
ai-defra-search-data = "app.entrypoints.fastapi:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.taskipy.tasks]
format = "uv run ruff format . && uv run ruff check . --fix"
